{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "8441717c-b793-4efd-83ce-79df9cbda060",
            "actions": [
                {
                    "name": "switchAngleHorizontal",
                    "type": "Value",
                    "id": "cd3af535-dfe6-4f4b-895e-946417316b13",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "switchAngleVertical",
                    "type": "Value",
                    "id": "6c0a1516-4f7b-43fa-8b1d-71b93473a2df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "shoot",
                    "type": "Value",
                    "id": "c443d1ef-02f4-4925-abb3-8810ec1248e5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "moveRight",
                    "type": "Button",
                    "id": "f5ec64de-9737-4305-bbff-9b8786d75450",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "moveLeft",
                    "type": "Button",
                    "id": "5fed3987-4e54-408a-ba4d-e58cf3fc227c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "moveUp",
                    "type": "Button",
                    "id": "f7a424f4-ff17-4282-b548-99a10cb7e5a1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "moveDown",
                    "type": "Button",
                    "id": "ba4487b7-5b37-4689-b48f-bfce51b5605e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bdffa689-67e3-4faf-bbd8-752dc50dd2aa",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "5d2058c3-a8f4-403c-9690-f4d182f8cb49",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "switchAngleHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "18633592-135b-4eca-af40-7ebdebc995af",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "switchAngleHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "68a8f0c1-df32-4ed7-a2c1-942c3fa97745",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "switchAngleHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1860f689-9a69-444d-93b0-7201db386d92",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ad95736-283e-43ad-be42-303853cfaffe",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9151b15-ffa2-4a95-a309-09e149abe1c2",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d2469fd8-5786-48bf-8523-4fdcb4ee2532",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "85f2c187-2f5b-4f4a-96e3-7a7d2af3e416",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "switchAngleVertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f42df66d-5bff-4130-aa20-f6c2103fd801",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "switchAngleVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "70e1d140-e6c0-478f-ab6f-245f556c125d",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "switchAngleVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}